# fastmcp

./: .pre-commit-config.yaml  AGENTS.md  README.md  SECURITY.md  logo.py  pyproject.toml  requirements.txt  server.py  warning_box_test.html
.github/: pull_request_template.md
.github/workflows/: auto-close-duplicates.yml  auto-close-needs-mre.yml  martian-issue-triage.yml  marvin-dedupe-issues.yml  marvin-issue-triage.yml  marvin-label-triage.yml  marvin.yml  publish.yml  run-static.yml  run-tests.yml  update-config-schema.yml  update-sdk-docs.yml
docs/: changelog.mdx  docs.json  updates.mdx
docs/clients/: elicitation.mdx  sampling.mdx
docs/clients/auth/: oauth.mdx
docs/community/: showcase.mdx
docs/css/: style.css
docs/deployment/: http.mdx  running-server.mdx  self-hosted.mdx  server-configuration.mdx  testing.mdx
docs/development/: contributing.mdx  releases.mdx  tests.mdx  upgrade-guide.mdx
docs/getting-started/: installation.mdx  quickstart.mdx  welcome.mdx
docs/integrations/: auth0.mdx  authkit.mdx  aws-cognito.mdx  azure.mdx  chatgpt.mdx  cursor.mdx  descope.mdx  fastapi.mdx  gemini-cli.mdx  github.mdx  google.mdx  mcp-json-configuration.mdx  openapi.mdx  scalekit.mdx  workos-oauth.mdx  workos.mdx
docs/patterns/: cli.mdx  testing.mdx  tool-transformation.mdx
docs/python-sdk/: fastmcp-cli-cli.mdx  fastmcp-cli-install-claude_code.mdx  fastmcp-cli-install-claude_desktop.mdx  fastmcp-cli-install-cursor.mdx  fastmcp-cli-install-gemini_cli.mdx  fastmcp-cli-install-mcp_json.mdx  fastmcp-cli-run.mdx  fastmcp-client-auth-oauth.mdx  fastmcp-client-client.mdx  fastmcp-client-elicitation.mdx  fastmcp-client-logging.mdx  fastmcp-client-oauth_callback.mdx  fastmcp-client-transports.mdx  fastmcp-prompts-prompt.mdx  fastmcp-prompts-prompt_manager.mdx  fastmcp-resources-resource.mdx  fastmcp-resources-resource_manager.mdx  fastmcp-resources-template.mdx  fastmcp-resources-types.mdx  fastmcp-server-auth-auth.mdx  fastmcp-server-auth-jwt_issuer.mdx  fastmcp-server-auth-middleware.mdx  fastmcp-server-auth-oauth_proxy.mdx  fastmcp-server-auth-oidc_proxy.mdx  fastmcp-server-auth-providers-auth0.mdx  fastmcp-server-auth-providers-aws.mdx  fastmcp-server-auth-providers-azure.mdx  fastmcp-server-auth-providers-descope.mdx  fastmcp-server-auth-providers-github.mdx  fastmcp-server-auth-providers-google.mdx  fastmcp-server-auth-providers-introspection.mdx  fastmcp-server-auth-providers-jwt.mdx  fastmcp-server-auth-providers-scalekit.mdx  fastmcp-server-auth-providers-supabase.mdx  fastmcp-server-auth-providers-workos.mdx  fastmcp-server-auth-redirect_validation.mdx  fastmcp-server-context.mdx  fastmcp-server-dependencies.mdx  fastmcp-server-elicitation.mdx  fastmcp-server-http.mdx  (+29 more)
docs/servers/: composition.mdx  context.mdx  elicitation.mdx  icons.mdx  logging.mdx  middleware.mdx  prompts.mdx  proxy.mdx  resources.mdx  sampling.mdx  server.mdx  storage-backends.mdx  tools.mdx
docs/servers/auth/: authentication.mdx  full-oauth-server.mdx  oauth-proxy.mdx  oidc-proxy.mdx  remote-oauth.mdx  token-verification.mdx
docs/tutorials/: rest-api.mdx
examples/: get_file.py  memory.py  mount_example.py  sampling_fallback.py  serializer.py
examples/auth/authkit_dcr/: README.md  server.py
examples/auth/aws_oauth/: README.md  client.py  server.py
examples/auth/azure_oauth/: server.py
examples/fastmcp_config_demo/: README.md
scripts/: auto_close_needs_mre.py
src/fastmcp/: mcp_config.py  settings.py
tests/: conftest.py  test_examples.py  test_mcp_config.py
tests/cli/: test_cli.py  test_config.py  test_cursor.py  test_fastmcp_config_integration.py  test_install.py  test_mcp_server_config_integration.py  test_mcp_server_config_schema.py  test_project_prepare.py  test_run.py  test_run_config.py  test_run_with_uv.py  test_server_args.py
tests/client/: test_client.py  test_elicitation.py  test_logs.py  test_oauth_callback_xss.py  test_openapi_experimental.py  test_openapi_legacy.py  test_sse.py  test_stdio.py  test_streamable_http.py
tests/contrib/: test_bulk_tool_caller.py  test_mcp_mixin.py
tests/integration_tests/: test_github_mcp_remote.py
tests/prompts/: test_prompt_manager.py
tests/resources/: test_resource_template.py  test_resources.py
tests/server/: test_context.py  test_file_server.py  test_icons.py  test_import_server.py  test_input_validation.py  test_log_level.py  test_mount.py  test_server.py  test_server_interactions.py  test_server_lifespan.py  test_tool_annotations.py  test_tool_transformation.py
tests/tools/: test_tool.py  test_tool_manager.py  test_tool_transform.py
tests/utilities/: test_cli.py  test_inspect.py  test_json_schema.py  test_json_schema_type.py  test_logging.py  test_mcp_config_stdio_reuse.py  test_storage.py
(+141 files in other folders)
